...
            VStack {
                ViewEventImageSelection(eventBuidler: eventBuilder)
                    .padding(.top, 30)
                    .padding(.horizontal)

                GenericTextInputView(
                    fieldName: "Title",
                    placeholder: "Ex: Midnight Runners",
                    iconString: "text.rectangle",
                    text: $eventBuilder.title)

                GenericMultilineTextInputView(
                    fieldName: "Description",
                    placeholder: "Ex: Come join us",
                    iconString: "pencil",
                    text: $eventBuilder.description,
                    accessibilityId: "addEvent.descriptionField")

                ActivitySection(eventBuilder: eventBuilder)
            }
            .frame(maxWidth: .infinity)
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity)
...
